# fastapi-orgs

./: .gitignore  LICENSE  README.md  pyproject.toml
fastapi_orgs/: __init__.py  models.py
fastapi_orgs/db/: base.py
